--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@ai-sdk/togetherai": "^1.0.30",
+    "@prisma/client": "^5.22.0",
     "axios": "^1.13.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
@@ -18,7 +20,6 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@prisma/client": "^5.22.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
